--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.13",
+    "@mui/material": "^5.14.13",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.1",
     "next": "13.5.5",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.69.3"
+    "sass": "^1.69.3",
+    "styled-components": "^6.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
