--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "next": "13.5.5",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.69.3",
-    "styled-components": "^6.1.0"
+    "sass": "^1.69.3"
   },
   "devDependencies": {
     "@types/node": "^20",
