--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.13",
+    "@mui/lab": "^5.0.0-alpha.149",
     "@mui/material": "^5.14.13",
     "@mui/styled-engine-sc": "^6.0.0-alpha.1",
+    "@octokit/core": "^5.0.1",
     "next": "13.5.5",
     "react": "^18",
     "react-dom": "^18",
