--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/lab": "^5.0.0-alpha.149",
     "@mui/material": "^5.14.13",
     "@mui/styled-engine-sc": "^6.0.0-alpha.1",
+    "@mui/styles": "^5.14.14",
     "@octokit/core": "^5.0.1",
     "next": "13.5.5",
     "react": "^18",
