--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "next": "13.5.5",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.69.3"
+    "sass": "^1.69.3",
+    "sweetalert2": "^11.7.32",
+    "sweetalert2-react-content": "^5.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
