--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
+    "@11ty/eleventy-img": "^5.0.0",
     "eleventy-sass": "^2.2.6",
     "gh-pages": "^6.1.1",
     "sass": "^1.79.4"
+  },
+  "dependencies": {
   }
 }
